--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "我是Joy"
+title: "我是Joy"
+description: ""
 header-img: "img/home-bg-o.jpg"
 ---
 
@@ -17,4 +17,3 @@ header-img: "img/home-bg-o.jpg"
     <p>对我来说，一些事情适合拿来作为爱好，像画画、吉他和骑行等等。当爱好和专业有了交互的地方，事情会变得很美好。</p>
     
 </div>
-
