--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@ header-img: "img/home-bg-o.jpg"
     <!--copied from markdown -->
     <blockquote><p>每一步，都算数</p></blockquote>
 
-    <p>你好，我是<strong>周毅(JOY)</strong>，一只程序猿，生活在成都。</p>
+    <p>你好，我是<strong>Joy</strong>区块链程序员、猫奴，目前在深圳</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/jooyyy">👉GitHub·Joy</a></p>
 
-    <p>对我来说，一些事情适合拿来作为爱好，像画画、吉他和骑行等等。当爱好和专业有了交互的地方，事情会变得很美好。</p>
+    <p>对我来说，一些事情适合拿来作为爱好，像画画、吉他和骑行这些。当爱好和专业有了交互的地方，事情会变得很美好。</p>
     
 </div>
