--- a/about.html
+++ b/about.html
@@ -7,10 +7,9 @@ header-img: "img/home-bg-o.jpg"
 
 <div class="zh post-container">
 
-    <!--copied from markdown -->
-    <blockquote><p>每一步，都算数</p></blockquote>
+    <blockquote><p>You often feel tired not because you've done too much, but because you've done too little of what spark a light in you.</p></blockquote>
 
-    <p>你好，我是<strong>Joy</strong>区块链程序员、猫奴，目前在深圳</p>
+    <p>你好，我是<strong>Joy</strong>铲屎官、工程师、准设计师，目前在深圳</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/jooyyy">👉GitHub·Joy</a></p>
 
